# rust-tg

./: Cargo.toml  README.md
src/: geom.rs  lib.rs  line.rs  point.rs  poly.rs  rect.rs  ring.rs  segment.rs  visitors.rs
