[package]
name = "tg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "high-level bindings to the `tg` geometry library"
repository = "https://github.com/jcdyer/tg-sys"
readme = "README.md"
keywords = ["geometry", "math"]
categories = ["graphics", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"
serde = { version = "1", features = ["derive"], optional = true }
tg-sys = "0.1.1"

[features]
default = ["atomics"]
atomics = ["tg-sys/atomics"]
serde = ["dep:serde"]

[patch.crates-io]
#tg-sys = { path = "../tg-sys" }
